--- a/Inbody.csproj
+++ b/Inbody.csproj
@@ -46,14 +46,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="InbodyMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="InbodyMain.Designer.cs">
+      <DependentUpon>InbodyMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="usercontrols\Analysis\UC_AnalysisWeight.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_AnalysisWeight.Designer.cs">
+      <DependentUpon>UC_AnalysisWeight.cs</DependentUpon>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_CheckPersonalInfo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_CheckPersonalInfo.Designer.cs">
+      <DependentUpon>UC_CheckPersonalInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_MemberNumber.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_MemberNumber.Designer.cs">
+      <DependentUpon>UC_MemberNumber.cs</DependentUpon>
+    </Compile>
     <Compile Include="usercontrols\UC_Analysis.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -90,8 +108,8 @@
     <Compile Include="usercontrols\UC_Settings.Designer.cs">
       <DependentUpon>UC_Settings.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="InbodyMain.resx">
+      <DependentUpon>InbodyMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -103,6 +121,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="usercontrols\Analysis\UC_AnalysisWeight.resx">
+      <DependentUpon>UC_AnalysisWeight.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usercontrols\Analysis\UC_CheckPersonalInfo.resx">
+      <DependentUpon>UC_CheckPersonalInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usercontrols\Analysis\UC_MemberNumber.resx">
+      <DependentUpon>UC_MemberNumber.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="usercontrols\UC_Analysis.resx">
       <DependentUpon>UC_Analysis.cs</DependentUpon>
     </EmbeddedResource>
