--- a/Inbody.csproj
+++ b/Inbody.csproj
@@ -46,12 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\AnalysisController.cs" />
     <Compile Include="InbodyMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="InbodyMain.Designer.cs">
       <DependentUpon>InbodyMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserAnalysisModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="usercontrols\Analysis\UC_AnalysisWeight.cs">
@@ -66,6 +69,12 @@
     <Compile Include="usercontrols\Analysis\UC_CheckPersonalInfo.Designer.cs">
       <DependentUpon>UC_CheckPersonalInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="usercontrols\Analysis\UC_InbodyTest.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_InbodyTest.Designer.cs">
+      <DependentUpon>UC_InbodyTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="usercontrols\Analysis\UC_MemberNumber.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -77,6 +86,18 @@
     </Compile>
     <Compile Include="usercontrols\Analysis\UC_PersonalInfoConsent.Designer.cs">
       <DependentUpon>UC_PersonalInfoConsent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_PostureArmpit1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_PostureArmpit1.Designer.cs">
+      <DependentUpon>UC_PostureArmpit1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_PostureArmpit2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Analysis\UC_PostureArmpit2.Designer.cs">
+      <DependentUpon>UC_PostureArmpit2.cs</DependentUpon>
     </Compile>
     <Compile Include="usercontrols\Analysis\UC_PostureFoot.cs">
       <SubType>UserControl</SubType>
@@ -126,6 +147,8 @@
     <Compile Include="usercontrols\UC_Settings.Designer.cs">
       <DependentUpon>UC_Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utils\ScreenEnum.cs" />
+    <Compile Include="Utils\TCPIP_Client.cs" />
     <EmbeddedResource Include="InbodyMain.resx">
       <DependentUpon>InbodyMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,11 +168,20 @@
     <EmbeddedResource Include="usercontrols\Analysis\UC_CheckPersonalInfo.resx">
       <DependentUpon>UC_CheckPersonalInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="usercontrols\Analysis\UC_InbodyTest.resx">
+      <DependentUpon>UC_InbodyTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="usercontrols\Analysis\UC_MemberNumber.resx">
       <DependentUpon>UC_MemberNumber.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="usercontrols\Analysis\UC_PersonalInfoConsent.resx">
       <DependentUpon>UC_PersonalInfoConsent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usercontrols\Analysis\UC_PostureArmpit1.resx">
+      <DependentUpon>UC_PostureArmpit1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usercontrols\Analysis\UC_PostureArmpit2.resx">
+      <DependentUpon>UC_PostureArmpit2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="usercontrols\Analysis\UC_PostureFoot.resx">
       <DependentUpon>UC_PostureFoot.cs</DependentUpon>
@@ -211,6 +243,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\postureFoot-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\postureHand.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\postureArmpit1_removeBack.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\postureArmpit1-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\postureArmpit2-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\postureArmpit2-removebg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\postureHand-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loading.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
