--- a/Inbody.csproj
+++ b/Inbody.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,7 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\AnalysisController.cs" />
+    <Compile Include="UseCase\AnalysisUseCase.cs" />
+    <Compile Include="UseCase\OverviewUseCase.cs" />
     <Compile Include="InbodyMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +62,8 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\UserAnalysisRepo.cs" />
+    <Compile Include="Repository\UserInfoRepo.cs" />
     <Compile Include="usercontrols\Analysis\UC_AnalysisWeight.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -111,6 +118,12 @@
     <Compile Include="usercontrols\Analysis\UC_PostureHand.Designer.cs">
       <DependentUpon>UC_PostureHand.cs</DependentUpon>
     </Compile>
+    <Compile Include="usercontrols\Overview\UC_EntryImage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="usercontrols\Overview\UC_EntryImage.Designer.cs">
+      <DependentUpon>UC_EntryImage.cs</DependentUpon>
+    </Compile>
     <Compile Include="usercontrols\UC_Analysis.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -147,6 +160,7 @@
     <Compile Include="usercontrols\UC_Settings.Designer.cs">
       <DependentUpon>UC_Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utils\DB\Connection.cs" />
     <Compile Include="Utils\ScreenEnum.cs" />
     <Compile Include="Utils\TCPIP_Client.cs" />
     <EmbeddedResource Include="InbodyMain.resx">
@@ -188,6 +202,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="usercontrols\Analysis\UC_PostureHand.resx">
       <DependentUpon>UC_PostureHand.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="usercontrols\Overview\UC_EntryImage.resx">
+      <DependentUpon>UC_EntryImage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="usercontrols\UC_Analysis.resx">
       <DependentUpon>UC_Analysis.cs</DependentUpon>
